--- a/templates/splunk6.5/config.yml
+++ b/templates/splunk6.5/config.yml
@@ -1,7 +1,7 @@
-name: Splunk
-description: MNC private catalog
-version: 6.5
-category: Log Analytics
-maintainer: None
-license: None 
-projectURL: https://hub.docker.com/r/splunk/splunk/
+name:Splunk
+description:MNC_private_catalog
+version:6.5
+category:Log_Analytics
+maintainer:None
+license:None 
+projectURL:https://hub.docker.com/r/splunk/splunk/
