--- a/templates/splunk/0/rancher-compose.yml
+++ b/templates/splunk/0/rancher-compose.yml
@@ -4,3 +4,7 @@ Splunk:
   name: "Splunk"
   version: "6.5"
   description: "Test"
+  questions:
+   - variable:"LANG"
+     label:"ロケールと文字コードを設定します"
+     description:"ja_JP.utf8 または、en_US.utf8 などを入力します"
