--- a/templates/mysql/config.yml
+++ b/templates/mysql/config.yml
@@ -1,5 +1,5 @@
 name: "MySQLServer"
-description: "MySQL Sevver. \n(Default root password=Mimosa2008)"
+description: "MySQL Sevver."
 version: "5.7"
 category: "SQLDBServer"
 maintainer: 
