--- a/templates/mysql/0/docker-compose.yml
+++ b/templates/mysql/0/docker-compose.yml
@@ -1,6 +1,7 @@
 MySQLServer:
   ports:
-  - 3306:3306/tcp
+  ports:
+    - ${public_port}:3306
   environment:
         MYSQL_ROOT_PASSWORD: ${root_password}
         MYSQL_DATABASE: ${db_name}
