--- a/templates/splunk/0/docker-compose.yml
+++ b/templates/splunk/0/docker-compose.yml
@@ -17,8 +17,7 @@ Splunk:
     SPLUNK_PRODUCT: splunk
     PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
     SPLUNK_VERSION: 6.5.0
-    SPLUNK_BUILD: 59c8927def0f
-    LANG: ja_JP.utf8
+    LANG: en_US.utf8
     SPLUNK_USER: root
   log_driver: json-file
   labels:
