--- a/templates/splunk/0/docker-compose.yml
+++ b/templates/splunk/0/docker-compose.yml
@@ -9,12 +9,16 @@ Splunk:
   environment:
     SPLUNK_BACKUP_DEFAULT_ETC: /var/opt/splunk
     SPLUNK_START_ARGS: --accept-license
+    SPLUNK_FILENAME: splunk-6.5.0-59c8927def0f-Linux-x86_64.tgz
+    DOCKER_VERSION: 1.9.0
     SPLUNK_BACKUP_APP: /var/opt/splunk/etc/apps
     SPLUNK_GROUP: splunk
     SPLUNK_HOME: /opt/splunk
     SPLUNK_PRODUCT: splunk
     PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-    LANG: en_US.utf8
+    SPLUNK_VERSION: 6.5.0
+    SPLUNK_BUILD: 59c8927def0f
+    LANG: ja_JP.utf8
     SPLUNK_USER: root
   log_driver: json-file
   labels:
@@ -30,4 +34,4 @@ Splunk:
   - /opt/splunk/etc
   - /opt/splunk/var
   working_dir: /opt/splunk
-net: bridge
+  net: bridge
