--- a/templates/splunk/0/rancher-compose.yml
+++ b/templates/splunk/0/rancher-compose.yml
@@ -1,7 +1,11 @@
-Splunk:
-  scale: 1
-  .catalog:
-    name: "Splunk"
-    version: "6.5"
-    description: "Test"
-
+.catalog:
+  name: "Splunk"
+  version: "6.5"
+  description: "Test"
+  questions:
+    - variable: public_port
+      description: "Public port to access the Splunk UI"
+      label: "UI Access port"
+      required: true
+      default: "8000"
+      type: "int"
