--- a/templates/pingfederation/config.yml
+++ b/templates/pingfederation/config.yml
@@ -1,1 +1,7 @@
-
+name: "PingFederate"
+description: "please login to console first with root:Mimosa2008 and run /etc/pingfederate/bin/run.sh"
+version: "8.0.3"
+category: "Identiry Federation"
+maintainer: 
+license: 
+projectURL: 
