--- a/templates/pingfederation/0/rancher-compose.yml
+++ b/templates/pingfederation/0/rancher-compose.yml
@@ -3,7 +3,7 @@ PingFederate:
 .catalog:
     name: "PingFederate"
     version: "8.0.3"
-    description: "Please access console first, and run /root/pingfederate/bin/run.sh then access http://<your docker host>:<ui port>"
+    description: "(This Image is not in use yet!!) Please access console first, and run /root/pingfederate/bin/run.sh then access http://<your docker host>:<ui port>"
     questions:
         - variable: ui_port
           description: "UI Port to access PingDederate"
