--- a/templates/grafana/config.yml
+++ b/templates/grafana/config.yml
@@ -1,4 +1,4 @@
 name: "Grafana4beta"
-description: "grafana 4.0 beta, with alerting feature. Please use admin:admin for the default user:pass."
+description: "grafana 4.0 betaにはalerting機能が追加されています。デフォルトのログインID、パスワードは、admin:admin です。"
 version: "4.0beta"
 category: Monitoring
