--- a/templates/owncloud/config.yml
+++ b/templates/owncloud/config.yml
@@ -1,4 +1,4 @@
 name: "OwnCloud"
-description: "OwnCloud 8.1, the BOX like on-prem software"
+description: "OwnCloud 8.1です。BOXに良く似たオンプレ用ソフトウェアです。"
 version: "8.1"
 category: Monitoring
