--- a/templates/postgresql/config.yml
+++ b/templates/postgresql/config.yml
@@ -1,5 +1,5 @@
 name: PostgreSQL
-description: MNC private catalog 
+description: "PostgreSQLです。ちょっとデータベースが利用したいときなどにどうぞ。" 
 version: latest
 category: Database # Category to be used for searching catalog entries
 maintainer: # The maintainer of the catalog entry
