--- a/templates/swagger/config.yml
+++ b/templates/swagger/config.yml
@@ -1,4 +1,4 @@
 name: "Swagger"
-description: "Swagger code-generator"
+description: "Swaggerのcode-generatorです。API利用を簡易化できます。"
 version: "latest"
 category: APIgen
