--- a/templates/graphite/0/rancher-compose.yml
+++ b/templates/graphite/0/rancher-compose.yml
@@ -2,7 +2,7 @@ Graphite:
   scale: 1
 .catalog:
     name: "Graphite"
-    version: "latest"
+    version: "1.0"
     description: "By default, basic auth is enabled for UI login. user/passwd=guest/guest For the system login, you can use root/root. n\ Also udp receiver is disabled by default. Please login to console and edit /var/graphite/conf/carbon.conf, and modify ENABLE_UDP_LISTENER from False to True"
     questions:
         - variable: ui_port
