--- a/templates/citrix-cpx/config.yml
+++ b/templates/citrix-cpx/config.yml
@@ -1,4 +1,4 @@
-name: "Citorix CPX Express"
+name: "Citrix CPX Express"
 description: "Citrix CPX Expressのイメージです。SSHのデフォルトユーザー:パスワードは root:linux です。詳細は次のURLより入手可能です。 https://www.microloadbalancer.com/"
 version: "11.1-48.10"
 category: LoadBalancer
