--- a/templates/splunk/1/rancher-compose.yml
+++ b/templates/splunk/1/rancher-compose.yml
@@ -39,5 +39,11 @@
       required: true
       default: "1514"
       type: "int"
+    - variable: network_input
+      description: "Network Input (not used by default) typically used to collect syslog UDP data (default: 1514)"
+      label: "Network Input"
+      required: true
+      default: "1514"
+type: "int"
 Splunk:
   scale: 1
