--- a/templates/splunk/1/rancher-compose.yml
+++ b/templates/splunk/1/rancher-compose.yml
@@ -39,7 +39,7 @@
       required: true
       default: "1514"
       type: "int"
-    - variable: network_input
+    - variable: network_input_udp
       description: "Network Input (not used by default) typically used to collect syslog UDP data (default: 1514)"
       label: "Network Input"
       required: true
